fixed camera bug

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,4 +17,5 @@ EXPOSE 5000
 ENV NAME APAC
 
 # Run app.py when the container launches
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
+CMD ["python3", "app.py"]
+#CMD ["gunicorn", "--bind", "0.0.0.0:5000", "app:app"]
