--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,7 @@ click-repl==0.3.0
 Flask==3.1.0
 flask-cors==5.0.1
 google-ai-generativelanguage==0.6.15
-google-api-core
+google-api-core==2.25.0rc1
 google-api-python-client==2.169.0
 google-auth==2.40.1
 google-auth-httplib2==0.2.0
@@ -35,6 +35,7 @@ pillow==11.2.1
 prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==5.29.4
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.4
