--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,11 +15,11 @@ click-repl==0.3.0
 Flask==3.1.0
 flask-cors==5.0.1
 google-ai-generativelanguage==0.6.15
-google-api-core==2.25.0rc1
-google-api-python-client==2.169.0
+google-api-core>=2.0.0,<3.0.0
+google-api-python-client>=2.0.0
 google-auth==2.40.1
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
+google-generativeai
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 grpcio-status==1.71.0
