--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -42,7 +42,8 @@
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-clipboard": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
